<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etnama_lengkap"
        android:hint="@string/nama_lengkap"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etuser"
        android:hint="@string/username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etpassword"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etconfirm_password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etemail"
        android:hint="@string/email"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btndate"
        android:text="@string/date_of_birth"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvdate"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rggender"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbmale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laki2" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perempuan"
            android:id="@+id/rbfemale" />

    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ettelephone"
        android:hint="@string/nomor_telephone"
        android:inputType="phone"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnsave"
        android:layout_gravity="center_horizontal"
        android:text="@string/daftar"/>
</LinearLayout>
