<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorRed">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:layout_width="102dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@null"

                android:text="@string/pemegang_polis"
                android:textColor="@color/colorWhite"
                android:id="@+id/btnpemegang_polis"/>

            <Button
                android:layout_width="102dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:text="@string/tertanggung"
                android:textColor="@color/colorWhite"
                android:id="@+id/btntertanggung"/>

            <Button
                android:layout_width="102dp"
                android:layout_height="55dp"
                android:background="@null"
                android:layout_gravity="center"

                android:text="@string/data_asuransi"
                android:textColor="@color/colorWhite"
                android:id="@+id/btndata_asuransi"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:layout_width="102dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@null"

                android:text="@string/manfaat_polis"
                android:textColor="@color/colorWhite"
                android:id="@+id/btnmanfaat_polis" />

            <Button
                android:layout_width="102dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:text="@string/investasi_transaksi"
                android:textColor="@color/colorWhite"/>

            <Button
                android:layout_width="102dp"
                android:layout_height="55dp"
                android:background="@null"
                android:layout_gravity="center"

                android:text="@string/status_pembayaran"
                android:textColor="@color/colorWhite"
                android:id="@+id/btnstatus_pembayaran"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="102dp"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:background="@null"

                android:text="@string/rekening"
                android:textColor="@color/colorWhite"
                android:id="@+id/btnrekening" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>